# DrClaw

./: .gitignore  README.md  README_en.md  install.sh  pyproject.toml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: USER_MANUAL.md
drclaw/: __init__.py  soul.py
drclaw/agent/: __init__.py  activation_state.py  common.py  context.py  debug.py  equipment_agent.py  loop.py  main_agent.py  memory.py  project_agent.py  registry.py  skills.py
drclaw/agent_hub/: __init__.py  store.py
drclaw/bus/: __init__.py  queue.py
drclaw/claude_code/: __init__.py  manager.py  mcp_bridge.py  models.py  retry.py
scripts/: generate_skill_i18n_openrouter.py
tests/: conftest.py  mocks.py  test_agent_hub.py  test_agent_loop.py  test_agent_registry.py  test_background_tasks.py  test_bus.py  test_claude_code.py  test_claude_code_retry.py  test_claude_code_tools.py  test_cli.py  test_config.py  test_context.py  test_cron_service.py  test_daemon.py  test_debug_logger.py  test_e2e.py  test_env_admin_tools.py  test_env_store.py  test_equipment.py  test_equipment_admin_tools.py  test_external_agents.py  test_feishu_adapter.py  test_helpers.py  test_local_skill_hub.py  test_main_agent.py  test_mcp_bridge.py  test_memory.py  test_message_tool.py  test_oauth_cli.py  test_oauth_integration.py  test_openai_codex_provider.py  test_packaging.py  test_project_agent.py  test_project_store.py  test_project_tools.py  test_provider.py  test_remote_tmux_store.py  test_remote_tmux_tools.py  test_repl.py  (+9 more)
(+583 files in other folders)
